# renderdoc-boost

./: CMakeLists.txt  README.md
include/: RenderdocBoost.h
src/: CMakeLists.txt  D3D11ContextDelegate.cpp  D3D11ContextDelegate.h  D3D11ContextRecorder.cpp  D3D11ContextRecorder.h  DeviceContextState.cpp  DeviceCreateParams.h  Log.cpp  Log.h  PrivateDataMap.cpp  PrivateDataMap.h  RenderdocBoost.cpp  RenderdocBoost.h  WrappedD3D11Async.cpp  WrappedD3D11Async.h  WrappedD3D11Context.cpp  WrappedD3D11Context.h  WrappedD3D11Device.cpp  WrappedD3D11Device.h  WrappedD3D11DeviceChild.cpp  WrappedD3D11DeviceChild.h  WrappedD3D11Resource.cpp  WrappedD3D11Resource.h  WrappedD3D11Shader.cpp  WrappedD3D11Shader.h  WrappedD3D11State.cpp  WrappedD3D11State.h  WrappedD3D11View.cpp  WrappedD3D11View.h  WrappedDXGISwapChain.cpp  WrappedDXGISwapChain.h
